--- a/html/ejercicio1.html
+++ b/html/ejercicio1.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="contenedor">
-        <div id="Ejercicio2">
-            <h2 class="subtitulo">Ejercicio 1</h2>
-            <section>
-                <h3>
-                    1. En una tienda de calzado se esta ofreciendo un descuento por compra a sus clientes con
-                    categorías, dependiendo de su tipo, sólo existen tres tipos de categorías, tipo A, tipo B y tipo C.
-                    Los descuentos son los siguientes:
-
-                    Tipo A 10% de descuento
-                    Tipo B 15% de descuento
-                    Tipo C 20% de descuento
-                </h3>
-                <a href="#Ejercicio1" id="boton1" class="btn">¡Ejecuta #Ejercicio1!</a>
-                <p>Resumen de factura: </p>
-                <p id="subTotal"></p>
-                <p id="descuento"></p>
-                <p id="total"></p>
-            </section>
-            <script src="/js/ejercicio1.js"></script>
-        </div>
+      <div id="Ejercicio2">
+        <h2 class="subtitulo">Ejercicio 1</h2>
+        <section>
+          <h3>
+            1. En una tienda de calzado se esta ofreciendo un descuento por
+            compra a sus clientes con categorías, dependiendo de su tipo, sólo
+            existen tres tipos de categorías, tipo A, tipo B y tipo C. Los
+            descuentos son los siguientes: Tipo A 10% de descuento Tipo B 15% de
+            descuento Tipo C 20% de descuento
+          </h3>
+          <a href="#Ejercicio1" id="boton1" class="btn">
+            ¡Ejecuta #Ejercicio1!
+          </a>
+          <br/>
+          <P>TIPOS DE CATEGORIAS</P>
+          <ul>
+              <li>Categoria A 10% de descuento</li>
+              <li>Categoria B 15% de descuento</li>
+              <li>Categoria C 20% de descuento</li>
+          </ul>
+          <p>Resumen de factura:</p>
+          <P>SU CATEGORIA ES</P>
+          <P id="categoria"></P>
+          <p>VALOR DE LA COMPRA</p>
+          <p id="subTotal"></p>
+          <p>DESCUENTO SEGUN CATEGORIA</p>
+          <p id="descuento"></p>
+          <p>TOTAL A PAGAR CON DESCUENTO APLICADO</p>
+          <p id="total"></p>
+        </section>
+        <script src="/js/ejercicio1.js"></script>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
