--- a/index.html
+++ b/index.html
@@ -10,21 +10,47 @@
 <body>
     <header class="inicio">
         <nav class="menu">
-            <a href="Ejercicio1">Ejercicio 1</a>
-            <a href="Ejercicio2">Ejercicio 2</a>
-            <a href="Ejercicio3">Ejercicio 3</a>
-            <a href="Ejercicio4">Ejercicio 4</a>
-            <a href="Ejercicio5">Ejercicio 5</a>
-            <a href="Ejercicio6">Ejercicio 6</a>
+            <a href="#Ejercicio1">Ejercicio 1</a>
+            <a href="#Ejercicio2">Ejercicio 2</a>
+            <a href="#Ejercicio3">Ejercicio 3</a>
+            <a href="#Ejercicio4">Ejercicio 4</a>
+            <a href="#Ejercicio5">Ejercicio 5</a>
+            <a href="#Ejercicio6">Ejercicio 6</a>
         </nav>
         <section class="inicio-contenedor contenedor">
             <h1 class="inicio-titulo">Actividad 1-Unidad 2</h1>
             <p class="inicio-parrafo">Integrantes: Jinson Medina, Leonel Sangolquiza</p>
         </section>
     </header>
-    
+
     <div class="contenedor">
-        <div id="Ejercicio2">
+        <div id="Ejercicio1" class="ejercicio">
+            <h2 class="subtitulo">Ejercicio 1</h2>
+            <section>
+                <h3>
+                    1. En una tienda de calzado se esta ofreciendo un descuento por compra a sus clientes con
+                    categorías, dependiendo de su tipo, sólo existen tres tipos de categorías, tipo A, tipo B y tipo C.
+                    Los descuentos son los siguientes:
+
+                    Tipo A 10% de descuento
+                    Tipo B 15% de descuento
+                    Tipo C 20% de descuento
+                </h3>
+                <a href="#Ejercicio1" id="boton1" class="btn">¡Ejecuta #Ejercicio1!</a>
+                <p>
+                    Tipo A 10% de descuento <br>
+                    Tipo B 15% de descuento <br>
+                    Tipo C 20% de descuento <br>
+                </p>
+                <p>Resumen de factura: </p>
+                <p id="subTotal"></p>
+                <p id="descuento"></p>
+                <p id="total"></p>
+            </section>
+            <script src="/js/ejercicio1.js"></script>
+        </div>
+
+        <div id="Ejercicio2" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 2</h2>
             <section>
                 <h3>
@@ -38,7 +64,7 @@
             </section>
             <script src="/js/ejercicio2.js"></script>
         </div>
-        <div id="Ejercicio3">
+        <div id="Ejercicio3" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 3</h2>
             <section>
                 <h3> Crear un programa que permita calcular Promedio de Notas, mientras N sea diferente de 0.
@@ -50,7 +76,7 @@
             <script src="/js/ejercicio3.js"></script>
         </div>
 
-        <div id="Ejercicio4">
+        <div id="Ejercicio4" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 4</h2>
             <section>
                 <h3>
@@ -73,11 +99,11 @@
             <script src="/js/ejercicio4.js"></script>
         </div>
 
-        <div id="Ejercicio5">
+        <div id="Ejercicio5" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 5</h2>
             <section>
                 <h3>
-                    Crear un programa que me permita ingresar la edad de 20 personas, 
+                    Crear un programa que me permita ingresar la edad de 20 personas,
                     y al final mostrar cuantos mayores y menores de edad hay.
                 </h3>
                 <a href="#Ejercicio5" id="boton5" class="btn">¡Ejecuta ejercicio5!</a>
@@ -88,7 +114,7 @@
             <script src="/js/ejercicio5.js"></script>
         </div>
 
-        <div id="Ejercicio6">
+        <div id="Ejercicio6" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 6</h2>
             <section>
                 <h3>
@@ -110,6 +136,7 @@
             </section>
             <script src="/js/ejercicio6.js"></script>
         </div>
+    </div>
 </body>
 
 </html>
