--- a/index.html
+++ b/index.html
@@ -28,26 +28,33 @@
             <h2 class="subtitulo">Ejercicio 1</h2>
             <section>
                 <h3>
-                    1. En una tienda de calzado se esta ofreciendo un descuento por compra a sus clientes con
-                    categorías, dependiendo de su tipo, sólo existen tres tipos de categorías, tipo A, tipo B y tipo C.
-                    Los descuentos son los siguientes:
-
-                    Tipo A 10% de descuento
-                    Tipo B 15% de descuento
-                    Tipo C 20% de descuento
+                  1. En una tienda de calzado se esta ofreciendo un descuento por
+                  compra a sus clientes con categorías, dependiendo de su tipo, sólo
+                  existen tres tipos de categorías, tipo A, tipo B y tipo C. Los
+                  descuentos son los siguientes: Tipo A 10% de descuento Tipo B 15% de
+                  descuento Tipo C 20% de descuento
                 </h3>
-                <a href="#Ejercicio1" id="boton1" class="btn">¡Ejecuta #Ejercicio1!</a>
-                <p>
-                    Tipo A 10% de descuento <br>
-                    Tipo B 15% de descuento <br>
-                    Tipo C 20% de descuento <br>
-                </p>
-                <p>Resumen de factura: </p>
+                <a href="#Ejercicio1" id="boton1" class="btn">
+                  ¡Ejecuta #Ejercicio1!
+                </a>
+                <br/>
+                <P>TIPOS DE CATEGORIAS</P>
+                <ul>
+                    <li>Categoria A 10% de descuento</li>
+                    <li>Categoria B 15% de descuento</li>
+                    <li>Categoria C 20% de descuento</li>
+                </ul>
+                <p>Resumen de factura:</p>
+                <P>SU CATEGORIA ES</P>
+                <P id="categoria"></P>
+                <p>VALOR DE LA COMPRA</p>
                 <p id="subTotal"></p>
+                <p>DESCUENTO SEGUN CATEGORIA</p>
                 <p id="descuento"></p>
+                <p>TOTAL A PAGAR CON DESCUENTO APLICADO</p>
                 <p id="total"></p>
-            </section>
-            <script src="/js/ejercicio1.js"></script>
+              </section>
+              <script src="/js/ejercicio1.js"></script>
         </div>
 
         <div id="Ejercicio2" class="ejercicio">
