--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="contenedor">
         <div id="Ejercicio1" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 1</h2>
-            <section>
+            <section class="contenido">
                 <h3>
                   1. En una tienda de calzado se esta ofreciendo un descuento por
                   compra a sus clientes con categorías, dependiendo de su tipo, sólo
@@ -59,7 +59,7 @@
 
         <div id="Ejercicio2" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 2</h2>
-            <section>
+            <section class="contenido">
                 <h3>
                     Ingresar números por teclado, hasta que el usuario ingrese el 0.
                     Al final imprimir la sumatoria de todos los números ingresados.
@@ -73,7 +73,7 @@
         </div>
         <div id="Ejercicio3" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 3</h2>
-            <section>
+            <section class="contenido">
                 <h3> Crear un programa que permita calcular Promedio de Notas, mientras N sea diferente de 0.
                 </h3>
                 <a href="#Ejercicio3" id="boton3" class="btn">¡Ejecuta ejercicio3!</a>
@@ -85,7 +85,7 @@
 
         <div id="Ejercicio4" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 4</h2>
-            <section>
+            <section class="contenido">
                 <h3>
                     Crear un programa que permita ingresar números enteros del 1 al 10, y muestre su equivalente en
                     números romanos
@@ -108,7 +108,7 @@
 
         <div id="Ejercicio5" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 5</h2>
-            <section>
+            <section class="contenido">
                 <h3>
                     Crear un programa que me permita ingresar la edad de 20 personas,
                     y al final mostrar cuantos mayores y menores de edad hay.
@@ -123,7 +123,7 @@
 
         <div id="Ejercicio6" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 6</h2>
-            <section>
+            <section class="contenido">
                 <h3>
                     En un almacén se están ofreciendo las siguientes ofertas de descuento en compras (ver tabla)
                     Calcular el valor de descuento y valor a pagar por la compra de cierta cantidad de un articulo , si
