--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </section>
               <script src="/js/ejercicio1.js"></script>
         </div>
-
+<!--EJercicio 2 jinson Medina-->
         <div id="Ejercicio2" class="ejercicio">
             <h2 class="subtitulo">Ejercicio 2</h2>
             <section class="contenido">
