--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </h3>
                 <a href="#Ejercicio6" id="boton6" class="btn">¡Ejecuta ejercicio5!</a>
                 <p>
-                    Cual es tu tipo a pagar <br>
+                    Elije tu opción del 1 al 4 <br>
                     1.- 0 a 100 <br>
                     2.- 100.01 a 250 <br>
                     3.- 250.01 a 800 <br>
